<resources>
    <string name="app_name">Coddle</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="help_us_to_know_more_about_your_lover_pet">Help us to know more about your lover pet</string>
    <string name="name_of_the_pet">Name of the pet</string>
    <string name="type">Type</string>
    <string name="breed">Breed</string>
    <string name="dob">DOB</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="blog">Blog</string>
    <string name="help_us">Help us</string>
    <string name="report_bug">Report bug</string>
    <string name="grooming">Grooming</string>
    <string name="medical_history">Medical history</string>
    <string name="nearby_clinic">Nearby pet clinic</string>
    <string name="nearby_pet_food_store">Nearby pet food store</string>
    <string name="select_date">Select date</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="walking">Walking</string>
    <string name="medical">Medical</string>
    <string name="retry">retry</string>
    <string name="distance">Distance :</string>
    <string name="steps">Steps :</string>
    <string name="start">start</string>
    <string name="title">Title</string>
</resources>