<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.activities.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_margin="12sp"
        app:cardCornerRadius="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgPet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/animal" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toStartOf="@id/imgMenu"
        app:layout_constraintStart_toEndOf="@id/cv"
        app:layout_constraintTop_toTopOf="@id/cv">


        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_pet"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imgMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:background="?actionBarItemBackground"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGroom"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="16sp"
        android:backgroundTint="#45CB4B"
        android:text="@string/grooming"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv" />

    <Button
        android:id="@+id/btnMedical"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_margin="16sp"
        android:backgroundTint="#FFC107"
        android:text="@string/medical_history"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGroom" />

    <Button
        android:id="@+id/btnWalking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:backgroundTint="#C04AD4"
        android:text="@string/walking"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMedical" />

    <Button
        android:id="@+id/btnFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:backgroundTint="#C04AD4"
        android:text="@string/nearby_pet_food_store"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnWalking" />

    <Button
        android:id="@+id/btnClinic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:backgroundTint="#C04AD4"
        android:text="@string/nearby_clinic"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFood" />


</androidx.constraintlayout.widget.ConstraintLayout>