<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/layoutHead"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:background="#EF7FD5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginStart="16sp"
        android:layout_marginTop="35sp"
        android:layout_marginEnd="16sp"
        android:autofillHints="@null"
        android:background="@drawable/input_shape"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHead" />

    <EditText
        android:id="@+id/edtPetName"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_margin="16sp"
        android:autofillHints="@null"
        android:background="@drawable/input_shape"
        android:hint="@string/name_of_the_pet"
        android:inputType="text"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />


    <EditText
        android:id="@+id/edtType"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_margin="16sp"
        android:autofillHints="@null"
        android:background="@drawable/input_shape"
        android:hint="@string/type"
        android:inputType="text"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPetName" />

    <EditText
        android:id="@+id/edtBreed"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_margin="16sp"
        android:autofillHints="@null"
        android:background="@drawable/input_shape"
        android:hint="@string/breed"
        android:inputType="text"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtType" />

    <TextView
        android:id="@+id/txtDob"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_margin="16sp"
        android:background="@drawable/input_shape"
        android:gravity="center_vertical"
        android:padding="12sp"
        android:text="@string/dob"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_baseline_date_range_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtBreed" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:backgroundTint="#F481A8"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDob" />




</androidx.constraintlayout.widget.ConstraintLayout>